--- a/Index actividad 4 .html
+++ b/Index actividad 4 .html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="es"
-<head>
-<title>Actividad 4</title>
-</head>
-<body>
-<h1><strong>Tengo a la mejor profe de html</strong></h1>
-<p>Tengo a la <strong>mejor profesora</strong> de html</p>
-</body>
+<html lang="es">
+    <head>
+        <title>Actividad 4</title>
+        <meta charset="UTF-8"/>
+    </head>
+    <body>
+        <h1><strong>Tengo a la<i> mejor profe de html</i></strong></h1>
+        <p>Tengo a la <strong>mejor profesora</strong> de html</p>
+    </body>
+<html>
