--- a/BF1/E2/a2.html
+++ b/BF1/E2/a2.html
@@ -14,7 +14,9 @@
         </a>
         <h1><strong>Familia</strong></h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. lAbore adipisci unde, est, ut<br>quisquam obcaecati reprehenderit aspernatur animi pariatur maxime inventore atque aliquid-<br>.Officiis cumque vouptas perspiciatis odit optio quisquam?</p>
-        <a href="Chinos comiendo.jpg" target="_blank">
-            <img src="Ver Imagen" alt="Ver Imagen">
+        <a href="img/Chinos comiendo.jpg" target="_blank">
+            <img src="img/Chinos comiendo.jpg" alt="Ver Imagen" />
+            Ver imágen
+        </a>
     </body>
 </html>
