--- a/BF1/E3/a2.html
+++ b/BF1/E3/a2.html
@@ -13,11 +13,24 @@
                 <li>Futurama</li>
                 <li>Desencanto</li>    
             </ul>
-        </ul>
             <li>Drama</li>
             <ul>
                 <li>Breaking Bad</li>
                 <li>Chernobyl</li>
                 <li>Mad Men</li>   
             </ul>
+            <li>Ciencia ficción</li>
+            <ul>
+                <li>Expediente X</li>
+                <li>Star Trek</li>
+                <li>Stargate</li>   
+            </ul>
+            <li>Comedia</li>
+            <ul>
+                <li>30 Rock</li>
+                <li>Seinfeld</li>
+                <li>Friends</li>   
+            </ul>
+        </ul>
     </body>
+</html>
