--- a/BF1/E3/a3.html
+++ b/BF1/E3/a3.html
@@ -8,8 +8,9 @@
         <h1><strong>Instrucciones para arreglar portátil</strong></h1>
         <ol start="1,10">
             <li>Apagar e equipo</li>    
-            <li>bfjsf</li>
-            <li>kwniwnfr</li>
+            <li>Acariciar con amor</li>
+            <li>Decirle cosas bonitas</li>
+            <li>Volver a encender</li>
         </ol>
     </body>
 </html>
