--- a/BF1/E3/a5.html
+++ b/BF1/E3/a5.html
@@ -8,3 +8,58 @@
         <h1><strong>Los mejores dinosaurios del mundo</strong></h1>
         <h2>Con 5 curiosidad incluidas de cada dinosaurio</h2>
     </body>
+        <dl>
+            <dt><strong> Rex </strong></dt>
+            <dd>Mordida poderosa: Su mordida podía ejercer una presión de hasta 6 toneladas, suficiente para triturar huesos.</dd>
+            <dd>Brazos pequeños pero fuertes: Aunque cortos, sus brazos podían levantar más de 180 kg cada uno.</dd>
+            <dd>Vista excelente: Tenía una visión binocular mejor que la de un águila actual.
+            <dd>No tan rápido: Corría a un máximo de 20 km/h, debido a su enorme tamaño.</dd>
+            <dd>Plumaje temprano: Los juveniles posiblemente tenían plumas para regular su temperatura.</dd>
+        </dl>
+        <a href="img/t-rex.jpg" target="_blank">
+            <img src="Ver imagen" alt="T-rex">
+        </a>
+        <dl>    
+            <dt><strong>Triceratops</strong></dt>
+            <dd>Tenía un gran escudo óseo que podía medir más de 2 metros de ancho.</dd>
+            <dd>Sus tres cuernos probablemente se usaban más para exhibición y defensa que para luchar.</dd>
+            <dd>Era herbívoro y podía masticar plantas duras gracias a su pico afilado.</dd>
+            <dd>Pesaba entre 6 y 12 toneladas, ¡más que un elefante africano!</dd>
+            <dd>Vivió en el Cretácico, poco antes de la extinción masiva.</dd>
+        </dl>
+        <a href="img/OIP.jpg" target="_blank">
+            <img src="Triceratops" alt="Triceratops">    
+        </a>
+        <dl>
+            <dt><strong>Velociraptor</strong></dt>
+            <dd>Era mucho más pequeño de lo que muestran las películas, del tamaño de un pavo.</dd>   
+            <dd>Tenía plumas, lo que lo hace un ancestro cercano de las aves modernas.</dd>   
+            <dd>Sus garras curvas en los pies eran ideales para atrapar presas.</dd>   
+            <dd>Era un cazador muy ágil, capaz de alcanzar 40 km/h.</dd>   
+            <dd>Probablemente cazaba en grupo, aunque esto sigue en debate.</dd>   
+        </dl>
+        <a href="img/Velociraptor.jpg" target="_blank">
+            <img src="Ver imagen" alt="Velociraptor">
+        </a>
+        <dl>    
+            <dt><Strong>Stegosaurus</Strong></dt>
+            <dd>Sus placas dorsales no eran para defensa, sino para regular la temperatura o exhibirse.</dd>
+            <dd>Tenía un cerebro del tamaño de una nuez, ¡muy pequeño para su cuerpo!</dd>
+            <dd>Su cola, llamada "thagomizer", tenía púas que usaba para defenderse.</dd>
+            <dd>Era herbívoro y su dieta incluía helechos y cicádeas.</dd>
+            <dd>Pesaba hasta 7 toneladas, pero sus patas traseras eran mucho más largas que las delanteras.</dd>
+        </dl>
+        <a href="img/OIP (1).jpg" target="_blank">
+            <img src="Ver imagen" alt="Stegosaurus">
+        </a>
+            <dl>
+                <dt><strong>Brachiosaurus</strong></dt>
+                <dd>Era uno de los dinosaurios más altos, llegando hasta 12-15 metros de altura.</dd>
+                <dd>Tenía un cuello largo para alcanzar las copas de los árboles.</dd>
+                <dd>Su postura era inusual, con las patas delanteras más largas que las traseras.</dd>
+                <dd>Pesaba unas 50 toneladas, ¡lo mismo que varios autobuses juntos!</dd>
+                <dd>No masticaba los alimentos; tragaba hojas enteras y las digería en su enorme estómago.</dd>
+            </dl>
+        <a href="img/ad.jpg" target="_blank">
+            <img src="Ver imagen" alt="Brachiosaurus">
+        </a>
