--- a/BF1/E3/a5.html
+++ b/BF1/E3/a5.html
@@ -16,8 +16,8 @@
             <dd>No tan rápido: Corría a un máximo de 20 km/h, debido a su enorme tamaño.</dd>
             <dd>Plumaje temprano: Los juveniles posiblemente tenían plumas para regular su temperatura.</dd>
         </dl>
-        <a href="img/t-rex.jpg" target="_blank">
-            <img src="Ver imagen" alt="T-rex">
+        <a href="img/rex.jpg" target="_blank">
+            <img src="img/rex.jpg" alt="T-rex">
         </a>
         <dl>    
             <dt><strong>Triceratops</strong></dt>
@@ -28,7 +28,7 @@
             <dd>Vivió en el Cretácico, poco antes de la extinción masiva.</dd>
         </dl>
         <a href="img/OIP.jpg" target="_blank">
-            <img src="Triceratops" alt="Triceratops">    
+            <img src="img/OIP.jpg" alt="Triceratops">    
         </a>
         <dl>
             <dt><strong>Velociraptor</strong></dt>
@@ -39,7 +39,7 @@
             <dd>Probablemente cazaba en grupo, aunque esto sigue en debate.</dd>   
         </dl>
         <a href="img/Velociraptor.jpg" target="_blank">
-            <img src="Ver imagen" alt="Velociraptor">
+            <img src="img/Velociraptor.jpg" alt="Velociraptor">
         </a>
         <dl>    
             <dt><Strong>Stegosaurus</Strong></dt>
@@ -50,7 +50,7 @@
             <dd>Pesaba hasta 7 toneladas, pero sus patas traseras eran mucho más largas que las delanteras.</dd>
         </dl>
         <a href="img/OIP (1).jpg" target="_blank">
-            <img src="Ver imagen" alt="Stegosaurus">
+            <img src="img/OIP (1).jpg" alt="Stegosaurus">
         </a>
             <dl>
                 <dt><strong>Brachiosaurus</strong></dt>
@@ -61,5 +61,6 @@
                 <dd>No masticaba los alimentos; tragaba hojas enteras y las digería en su enorme estómago.</dd>
             </dl>
         <a href="img/ad.jpg" target="_blank">
-            <img src="Ver imagen" alt="Brachiosaurus">
+            <img src="img/ad.jpg" alt="Brachiosaurus">
         </a>
+        
