--- a/BF1/E4/a4.html
+++ b/BF1/E4/a4.html
@@ -45,7 +45,9 @@
     </body> 
         <ol>
             <li><h3>Comienza por pelar y picar la cebolla y los dientes de ajo. Procura que los trozos sean pequeños para que se mezclen bien con la salsa de tomate.</h3></li>
-                <img src="img/picar.png" alt="Picar cebolla" height="300" width="500">
+                <a href="img/picar.png" target="_blank">
+                    <img src="img/picar.png" alt="picar" height="300" width="500">
+                </a>
             <li><h3>A continuación, calienta el aceite de oliva en una sartén a fuego medio. Cuando esté caliente, añade la cebolla y el ajo picados. Cocina hasta que la cebolla esté transparente, removiendo de vez en cuando para que no se quemen.</h3></li>
             <a href="img/freir.png" target="_blank">
                 <img src="img/freir.png" alt="freir" height="300" width="500">
