errores listas correjidas

--- a/BF1/E4/a4.html
+++ b/BF1/E4/a4.html
@@ -23,7 +23,7 @@
             <a href="img/ajo.jpg" target="_blank">
                 <img src="img/ajo.jpg" alt="ajo">
             </a>
-            <li><strong>Queso rallado para decorar.</strong></li>
+            <li><strong>Dos cucharadas de aceite de oliva.</strong></li>
             <a href="img/oliva 2.jpg" target="_blank">
                 <img src="img/oliva 2.jpg" alt="oliva">
             </a>
