--- a/BF1/E1/a4.html
+++ b/BF1/E1/a4.html
@@ -8,4 +8,4 @@
         <h1><strong>Tengo a la<i> mejor profe de html</i></strong></h1>
         <p>Tengo a la <strong>mejor profesora</strong> de html</p>
     </body>
-<html>
+</html>
