--- a/BF1/E1/a7.html
+++ b/BF1/E1/a7.html
@@ -9,4 +9,4 @@
         <p>Mis vacaciones fueron por varias ciudades del mundo por ejemplo la ultima ciudad fue<em><strong> Paris</strong><em> fue unas d e las mejores ciudades que he ido ha sido muy romantico y podimos visitar la Torre Eifel una de las mejores cosas de Paris Y lo mas obnito que he visto en mi vida</p>
         <p>Y la otra mejor pagina que he ido es<em>Lleida</em><strong>Es una de las mejores ciudades de españa que puedes visitar tienes muchos sitios turisticos para visitar tienes la calle mayor la ceu vella y mucha cultura para empaparte de su mejor cultura</strong></p>
     </body>
-<html>
+</html>
