--- a/BF1/E2/a1.html
+++ b/BF1/E2/a1.html
@@ -11,4 +11,4 @@
             <p>Lorem ipsum dolor sit amet cosectetur adispiscing elit. Sed fugiat, odit<br>laboriosam ipsma enim minus conmodi ex nisi accousantium voluptates<br> quod quaerat a saepe tempora similique voluptatum ad totam placeat?</p>
             <a href="a2.html">ver nuestra historia</a>
     </body>
-<html>
+</html>
