--- a/BF1/E3/a5.html
+++ b/BF1/E3/a5.html
@@ -7,7 +7,6 @@
     <body>
         <h1><strong>Los mejores dinosaurios del mundo</strong></h1>
         <h2>Con 5 curiosidad incluidas de cada dinosaurio</h2>
-    </body>
         <dl>
             <dt><strong> Rex </strong></dt>
             <dd>Mordida poderosa: Su mordida podía ejercer una presión de hasta 6 toneladas, suficiente para triturar huesos.</dd>
@@ -63,4 +62,5 @@
         <a href="img/ad.jpg" target="_blank">
             <img src="img/ad.jpg" alt="Brachiosaurus">
         </a>
-        
+    </body>
+</html>
