--- a/BF1/E5/a1.html
+++ b/BF1/E5/a1.html
@@ -6,10 +6,18 @@
     </head>
     <body>
         <table>
-            <tr><strong>Portada</strong></tr><br>
-            <a href="img/descargar.jpg" target="_blank">
-                <img src="img/descargar.jpg" alt="Mulan">
-            </a>
-            <tr><strong>Portada</strong></tr><br>
+            <thead>
+                <th>Portada</th>
+                <th>Títol</th>
+                <th>Any</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><img src="img/descargar.jpg" alt="Mulan"></td>
+                    <td>Mulan</td>
+                    <td>1998</td>
+                </tr>
+            </tbody>
         </table>
     </body>
+</html>
