--- a/BF1/E5/a1.html
+++ b/BF1/E5/a1.html
@@ -17,6 +17,16 @@
                     <td>Mulan</td>
                     <td>1998</td>
                 </tr>
+                <tr>
+                    <td><img src="img/a.jpg" alt="Leon"></td>
+                    <td>El Rey leon</td>
+                    <td>1994</td>
+                </tr>
+                <tr>
+                </tr><td><img src="img/ça.jpg" alt="Aladin"></td>
+                <td>Aladin</td>
+                <td>1992</td>
+                </tr>
             </tbody>
         </table>
     </body>
