Corregir errores y hacer index

--- a/BF1/E1/a1.html
+++ b/BF1/E1/a1.html
@@ -6,7 +6,6 @@
     </head>
     <body>
         <h1>El tornado de Estados Unidos hace mucho daño a las casas cercanas</h1>
-        <p> Fue uno de los tornados mas importantes de los ultimos años y a sido>
-    <!-- Información adicional usando comentarios -->
+        <p> Fue uno de los tornados mas importantes de los ultimos años y a sido<p>
     </body>
 </html>
