--- a/BF1/E2/a2.html
+++ b/BF1/E2/a2.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>menu-del-dia class="html"</menu-del-dia></title>
+        <title>menu-del-dia class</title>
         <meta charset="UTF-8"/>   
     </head>
     <body>
-        <a href="a1.html">volver al incio</a>  
+        <a href="a1.html">"Volver al inicio"</a>  
         <h1><strong>Menús</strong></h1>
         <h2><strong>Del día</strong></h2>
         <p>Lorem ipsum dolor sit amet consectrutr, adispiscing elit. Assumenda, quos nunmquam magni<br>nesciunt molestiae et necessitatibus conseuquuntur cum repellendus, amet similique nam<br>quod aliquid quae deserunt commodi excepturi vero unde!</p>
-        <a href="Imagen.jp g" target="_blank">
+        <a href="img/Imagen.jpg" target="_blank">
             <img src="Ver imagen" alt="Ver Imagen">
         </a>
         <h1><strong>Familia</strong></h1>
