--- a/BF1/E4/a2.html
+++ b/BF1/E4/a2.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8"/>
-        <title>a2 img.html</title>
+        <title>Img Redes sociales</title>
     </head>
     <body>
         <h1><strong>Redes sociales</strong></h1>
