--- a/BF1/E4/a3.html
+++ b/BF1/E4/a3.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8"/>
-        <title>a3 img.hmtl</title>
+        <title>mueble de Ikea</title>
     </head>
     <body>
         <h1><strong>Aparatox</strong></h1>
@@ -10,8 +10,8 @@
         <a href="img/ikea.jpg" target="_blank">
             <img src="img/ikea.jpg" alt="Ikea">
         </a>
-        <p><strong>230</strong><br></p>
-        <p><strong>Descripcion</strong><br></p>
-        <p>este es el mejor mueble de ikea si necesitas un nuevo armario este es el mejor</p>
+        <p><strong>230</strong><br/></p>
+        <p><strong>Descripción</strong><br/></p>
+        <p>Este es el mejor mueble de ikea si necesitas un nuevo armario este es el mejor</p>
     </body>
 </html>
