--- a/BF1/E4/a4.html
+++ b/BF1/E4/a4.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8"/>
-        <title>a4 img.html</title>
+        <title>Macarrones con Tomate</title>
     </head>
     <body>
         <h1><strong>Macarrones con tomate</strong></h1>
@@ -42,7 +42,6 @@
         </ul>
     
         <h1><strong>Cómo hacer la receta de Macarrones con Tomate</strong></h1>
-    </body> 
         <ol>
             <li><h3>Comienza por pelar y picar la cebolla y los dientes de ajo. Procura que los trozos sean pequeños para que se mezclen bien con la salsa de tomate.</h3></li>
                 <a href="img/picar.png" target="_blank">
