--- a/BF1/E1/a4.html
+++ b/BF1/E1/a4.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8"/>
     </head>
     <body>
-        <h1><strong>Tengo a la<i> mejor profe de html</i></strong></h1>
+        <h1><strong>Tengo a la<em> mejor profe de html</em></strong></h1>
         <p>Tengo a la <strong>mejor profesora</strong> de html</p>
     </body>
 </html>
