--- a/BF1/E3/a2.html
+++ b/BF1/E3/a2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-       <title>a2.hmtl</title>
+       <title>Listas de dibujos animados</title>
         <meta charset="UTF-8"/>
     </head>
     <body>
