--- a/BF1/E3/a3.html
+++ b/BF1/E3/a3.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-            <title>a3.html</title>
+            <title>Lista para arreglar un ordinador</title>
             <meta charset="UTF-8"/>
     </head>
     <body>
         <h1><strong>Instrucciones para arreglar portátil</strong></h1>
-        <ol start="1,10">
+        <ol>
             <li>Apagar e equipo</li>    
             <li>Acariciar con amor</li>
             <li>Decirle cosas bonitas</li>
