--- a/index.html
+++ b/index.html
@@ -1,7 +1,37 @@
-<!doctype html>
-<html>
-   <head></head>
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <title>Index</title>
+    </head>
     <body>
+        <h1>Página de Eduard Sanchez</h1>
+        <h2>Activitats del capítol 1</h2>
+        <a href="BF1/E1/a1.html"> Actividad 1</a><br/>
+        <a href="BF1/E1/a2.html"> Actividad 2</a><br/>
+        <a href="BF1/E1/a3.html"> Actividad 3</a><br/>
+        <a href="BF1/E1/a4.html"> Actividad 4</a><br/>
+        <a href="BF1/E1/a5.html"> Actividad 5</a><br/>
+        <a href="BF1/E1/a6.html"> Actividad 6</a><br/>
+        <a href="BF1/E1/a7.html"> Actividad 7</a><br/>
+        <h2>Activitats del capítol 2</h2>
+        <a href="BF1/E2/a1.html"> Actividad 1</a><br/>
+        <a href="BF1/E2/a2.html"> Actividad 2</a><br/>
+        <a href="BF1/E2/a3.html"> Actividad 3</a><br/>
+        <h2>Activitats del capítol 3</h2>
+        <a href="BF1/E3/a1.html"> Actividad 1</a><br/>
+        <a href="BF1/E3/a2.html"> Actividad 2</a><br/>
+        <a href="BF1/E3/a3.html"> Actividad 3</a><br/>
+        <a href="BF1/E3/a4.html"> Actividad 4</a><br/>
+        <a href="BF1/E3/a5.html"> Actividad 5</a><br/>
+        <h2>Activitats del capítol 4</h2>
+        <a href="BF1/E4/a1.html"> Actividad 1</a><br/>
+        <a href="BF1/E4/a2.html"> Actividad 2</a><br/>
+        <a href="BF1/E4/a3.html"> Actividad 3</a><br/>
+        <a href="BF1/E4/a4.html"> Actividad 4</a><br/>
+        <h2>Activitats del capítol 5</h2>
+        <a href="BF1/E5/a1.html"> Actividad 1</a><br/>
+        <a href="BF1/E5/a2.html"> Actividad 2</a><br/>
+        
     </body>
-        <h1> Pàgina web del Eduard Chavarriaga</h1>
-    </html>
+</html>
