--- a/BF1/E5/a2.html
+++ b/BF1/E5/a2.html
@@ -8,11 +8,7 @@
         <table>
            <caption>Mi tabla</caption>
             <thead>
-                <th>Nombre</th>
-                <th>Apellido</th>
-                <th>>Edad</th>
-                <th>Génere</th>
-                <th>¿Por qué es mi enemigo</th>
+                <caption>Tabla</caption>
             </thead>
             <tbody>
                 
