Index solucinado y E5 A2 acabada

--- a/BF1/E5/a2.html
+++ b/BF1/E5/a2.html
@@ -8,11 +8,22 @@
         <table>
            <caption>Mi tabla</caption>
             <thead>
-                <caption>Tabla</caption>
-                
+                <tr>
+                    <th>Nombre</th>
+                    <th>Apellidos</th>
+                    <th>Edad</th>
+                    <th>Género</th>
+                    <th>¿Por qué es mi enemigo?</th>
+                </tr>
             </thead>
             <tbody>
-                
+                <tr>
+                    <td>Eugeni</td>
+                    <td>Valiullin</td>
+                    <td>19</td>
+                    <td>Masculino</td>
+                    <td>Por que le odio</td>
+                </tr>   
             </tbody>
         </table>
     </body>
