--- a/BF1/index.html
+++ b/BF1/index.html
@@ -7,30 +7,40 @@
     <body>
         <h1>Página de Eduard Sanchez</h1>
         <h2>Activitats basiques</h2>
-        <a href="BF1/E1/a1.html"> Actividad 1</a><br/>
-        <a href="BF1/E1/a2.html"> Actividad 2</a><br/>
-        <a href="BF1/E1/a3.html"> Actividad 3</a><br/>
-        <a href="BF1/E1/a4.html"> Actividad 4</a><br/>
-        <a href="BF1/E1/a5.html"> Actividad 5</a><br/>
-        <a href="BF1/E1/a6.html"> Actividad 6</a><br/>
-        <a href="BF1/E1/a7.html"> Actividad 7</a><br/>
+        <ul>
+            <li><a href="E1/a1.html"> Actividad 1</a></li>
+            <li><a href="E1/a2.html"> Actividad 2</a></li>
+            <li><a href="E1/a3.html"> Actividad 3</a></li>
+            <li><a href="E1/a4.html"> Actividad 4</a></li>
+            <li><a href="E1/a5.html"> Actividad 5</a></li>
+            <li><a href="E1/a6.html"> Actividad 6</a></li>
+            <li><a href="E1/a7.html"> Actividad 7</a></li>
+        </ul>
         <h2>Activitats del Hipervincles 2</h2>
-        <a href="BF1/E2/a1.html"> Actividad 1</a><br/>
-        <a href="BF1/E2/a2.html"> Actividad 2</a><br/>
-        <a href="BF1/E2/a3.html"> Actividad 3</a><br/>
+        <ul>
+            <li><a href="E2/a1.html"> Actividad 1</a></li>
+            <li><a href="E2/a2.html"> Actividad 2</a></li>
+            <li><a href="E2/a3.html"> Actividad 3</a></li>
+        </ul>
         <h2>Activitats del Img 3</h2>
-        <a href="BF1/E3/a1.html"> Actividad 1</a><br/>
-        <a href="BF1/E3/a2.html"> Actividad 2</a><br/>
-        <a href="BF1/E3/a3.html"> Actividad 3</a><br/>
-        <a href="BF1/E3/a4.html"> Actividad 4</a><br/>
-        <a href="BF1/E3/a5.html"> Actividad 5</a><br/>
+        <ul>
+            <li><a href="E3/a1.html"> Actividad 1</a><br/></li>
+            <li><a href="E3/a2.html"> Actividad 2</a><br/></li>
+            <li><a href="E3/a3.html"> Actividad 3</a><br/></li>
+            <li><a href="E3/a4.html"> Actividad 4</a><br/></li>
+            <li><a href="E3/a5.html"> Actividad 5</a><br/></li>
+        </ul>
         <h2>Activitats de Llistes 4</h2>
-        <a href="BF1/E4/a1.html"> Actividad 1</a><br/>
-        <a href="BF1/E4/a2.html"> Actividad 2</a><br/>
-        <a href="BF1/E4/a3.html"> Actividad 3</a><br/>
-        <a href="BF1/E4/a4.html"> Actividad 4</a><br/>
+        <ul>
+            <li><a href="a1.html"> Actividad 1</a></li>
+            <li><a href="a2.html"> Actividad 2</a></li>
+            <li><a href="a3.html"> Actividad 3</a></li>
+            <li><a href="a4.html"> Actividad 4</a></li>
+        </ul>
         <h2>Activitats del Taules 5</h2>
-        <a href="BF1/E5/a1.html"> Actividad 1</a><br/>
-        <a href="BF1/E5/a2.html"> Actividad 2</a><br/>
+        <ul>
+            <li><a href="a1.html"> Actividad 1</a></li>
+            <li><a href="a2.html"> Actividad 2</a></li>
+        </ul>
     </body>
 </html>
