--- a/BF1/E1/a1.html
+++ b/BF1/E1/a1.html
@@ -7,5 +7,6 @@
     <body>
         <h1>El tornado de Estados Unidos hace mucho daño a las casas cercanas</h1>
         <p> Fue uno de los tornados mas importantes de los ultimos años y a sido<p>
+        <a href="dsd.html">"Volver al Index"</a>     
     </body>
 </html>
