--- a/BF1/index.html
+++ b/BF1/index.html
@@ -32,15 +32,15 @@
         </ul>
         <h2>Activitats de Llistes 4</h2>
         <ul>
-            <li><a href="a1.html"> Actividad 1</a></li>
-            <li><a href="a2.html"> Actividad 2</a></li>
-            <li><a href="a3.html"> Actividad 3</a></li>
-            <li><a href="a4.html"> Actividad 4</a></li>
+            <li><a href="E4/a1.html"> Actividad 1</a></li>
+            <li><a href="E4/a2.html"> Actividad 2</a></li>
+            <li><a href="E4/a3.html"> Actividad 3</a></li>
+            <li><a href="E4/a4.html"> Actividad 4</a></li>
         </ul>
         <h2>Activitats del Taules 5</h2>
         <ul>
-            <li><a href="a1.html"> Actividad 1</a></li>
-            <li><a href="a2.html"> Actividad 2</a></li>
+            <li><a href="E5/a1.html"> Actividad 1</a></li>
+            <li><a href="E5/a2.html"> Actividad 2</a></li>
         </ul>
     </body>
 </html>
