--- a/BF2/E4/a1.html
+++ b/BF2/E4/a1.html
@@ -7,8 +7,7 @@
     </head>
     <body>
         <h1>Css 1 Actividad</h1>
-        <p class="Titulo"> Eastman Kodak Company (popularmente conocida como Kodak)<br/> es una compañía multinacional fundada el año 1892 en los Estados Unidos dedicada al diseño, producción y comercialización de equipamiento fotográfico.<br/> Durante más de cien años ha sido una empresa muy conocida por sus cámaras y películas fotográficas y actualmente está reorientando su actividad hacia dos mercados principales: la fotografía digital<br/> y la impresión digital, aunque hay pocas veces en que se orienta a la fotografía analógica en la actualidad.<br/> Desde 2020 comercializa además productos farmacéuticos.</p>
-        <a class="Hipervinculo" href="https://www.youtube.com/">Editor de texto</a>
-        </a>
+        <p> <strong><span class="kodak">Kodak</span> Company</strong>  (popularmente conocida como<span class="kodak">Kodak</span>)<br/> es una compañía multinacional fundada el año<span class="year1892">1892</span> en los Estados Unidos dedicada al diseño, producción y comercialización de equipamiento fotográfico.<br/> Durante más de <span class="cienaños"> cien años</span> ha sido una empresa muy conocida por sus<span class="camaras"> cámaras y películas fotográficas</span> y actualmente está reorientando su actividad hacia dos mercados principales: la fotografía digital<br/> y la <span class="impresion">impresión digital</span>, aunque hay pocas veces en que se orienta a la<span class="fotografia"> fotografía analógica</span> en la actualidad.<br/> Desde<span class="year2020"> 2020</span> comercializa además productos<span class="farmaceuticos"> farmacéuticos.</span></p>
+
     </body>
 </html>
